--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇺🇸 美国-2.33MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-455.0KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇯🇵 日本-1.89MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.41MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇯🇵 日本-167.5KB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-825.2KB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇭🇰 香港-1.62MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-378.6KB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-865.5KB/s(Youtube:不良林), server: tw01.henet.cyou, port: 30000, type: trojan, password: 73b6dd15-a43d-446f-9a35-081a16c6a065, sni: tw01.henet.cyou, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.32MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-2.58MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-619.1KB/s(Youtube:不良林), server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇺🇸 美国-5.10MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-361.2KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-906.7KB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.38MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-455.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-167.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-825.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-378.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-865.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-619.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-361.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-906.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-455.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-167.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-825.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-378.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-865.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-619.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-361.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-906.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,21 +53,20 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-455.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-167.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-825.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-378.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-865.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-619.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-361.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-906.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-865.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.41MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
@@ -75,30 +74,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-455.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-167.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-825.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-378.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-865.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-619.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-361.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-906.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-455.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-167.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-825.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-378.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-865.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-619.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-361.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-906.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -106,15 +105,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-455.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-167.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-825.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-378.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-865.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-619.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-361.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-906.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -131,15 +130,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-455.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-167.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-825.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-378.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-865.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-619.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-361.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-906.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
