--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.33MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1.41MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇯🇵 日本-167.5KB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-2.58MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-619.1KB/s(Youtube:不良林), server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-5.10MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-361.2KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-906.7KB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.38MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-703.7KB/s(Youtube:不良林), server: 111.45.22.136, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇺🇸 美国-2.08MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.40MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-602.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.85MB/s(Youtube:不良林), server: 120.233.150.146, port: 65024, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-829.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65089, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇸🇬 新加坡-1.95MB/s(Youtube:不良林), server: trojan3.udpgw.com, port: 443, type: trojan, password: 8db1b560-019d-11ed-8bdf-1239d0255272, sni: trojan3.udpgw.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-456.2KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇹🇭 泰国-330.3KB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-167.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-619.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-361.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-906.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-703.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-602.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-829.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-330.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-167.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-619.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-361.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-906.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-703.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-602.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-829.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-330.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-167.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-619.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-361.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-906.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-703.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-602.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-829.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-330.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.41MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.40MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-167.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-619.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-361.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-906.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-703.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-602.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-829.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-330.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-167.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-619.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-361.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-906.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-703.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-602.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-829.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-330.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-167.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-619.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-361.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-906.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-703.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-602.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-829.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-330.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-167.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-619.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-361.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-906.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-703.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-602.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-829.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-330.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
