--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-167.5KB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇳 中国-703.7KB/s(Youtube:不良林), server: 111.45.22.136, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇺🇸 美国-2.08MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1.40MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-602.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.00MB/s(Youtube:不良林), server: 36.134.156.5, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇯🇵 日本-158.8KB/s(Youtube:不良林), server: 89.31.126.31, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-740.8KB/s(Youtube:不良林), server: 36.134.154.119, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇨🇳 中国-443.5KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65068, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-1.66MB/s(Youtube:不良林), server: 120.233.150.146, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
   - {name: 🇨🇳 中国-1.85MB/s(Youtube:不良林), server: 120.233.150.146, port: 65024, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
   - {name: 🇨🇳 中国-829.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65089, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇸🇬 新加坡-1.95MB/s(Youtube:不良林), server: trojan3.udpgw.com, port: 443, type: trojan, password: 8db1b560-019d-11ed-8bdf-1239d0255272, sni: trojan3.udpgw.com, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-167.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-703.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-602.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-158.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-740.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-829.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.95MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-167.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-703.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-602.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-158.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-740.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-829.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.95MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-167.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-703.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-602.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-158.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-740.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-829.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.95MB/s(Youtube:不良林)
@@ -66,18 +66,17 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.40MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-167.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-703.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-602.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-158.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-740.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-829.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.95MB/s(Youtube:不良林)
@@ -88,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-167.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-703.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-602.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-158.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-740.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-829.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.95MB/s(Youtube:不良林)
@@ -104,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-167.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-703.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-602.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-158.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-740.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-829.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.95MB/s(Youtube:不良林)
@@ -129,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-167.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-703.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-602.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-158.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-740.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-829.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.95MB/s(Youtube:不良林)
