--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-167.9KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-556.0KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-456.2KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-602.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.88MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-694.0KB/s(Youtube:不良林), server: 72.140.224.195, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-883.3KB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-552.6KB/s(Youtube:不良林), server: 72.140.224.195, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1002.8KB/s(Youtube:不良林), server: 72.140.224.195, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.84MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.98MB/s(Youtube:不良林), server: cn03.downloadmovie.cn, port: 65027, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-531.9KB/s(Youtube:不良林), server: 36.134.154.119, port: 65072, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇨🇳 中国-177.3KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇨🇳 中国-511.7KB/s(Youtube:不良林), server: 120.233.150.146, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-3.05MB/s(Youtube:不良林), server: 120.233.29.189, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.29.189}}
+  - {name: 🇨🇳 中国-526.8KB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-355.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-340.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-643.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-971.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-167.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-556.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-602.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-694.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-883.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-552.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1002.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-531.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-511.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-526.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-643.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-971.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-167.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-556.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-602.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-694.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-883.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-552.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1002.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-531.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-511.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-526.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-643.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-971.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-167.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-556.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-602.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-694.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-883.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-552.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1002.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-531.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-511.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-526.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-643.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-971.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-167.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-556.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-602.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-694.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-883.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-552.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1002.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-531.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-511.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-526.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-643.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-971.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-167.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-556.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-602.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-694.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-883.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-552.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1002.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-531.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-511.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-526.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-643.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-971.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-167.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-556.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-602.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-694.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-883.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-552.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1002.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-531.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-511.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-526.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-643.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-971.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-167.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-556.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-456.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-602.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-694.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-883.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-552.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1002.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-531.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-511.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-526.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-643.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-971.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
